Separated SI and main text

--- a/SMHET.bib
+++ b/SMHET.bib
@@ -8,9 +8,8 @@
 author = {J. R. M. Saavedra and Ana Asenjo-Garcia and { Garc\'ia de Abajo}, F. J.},
 title = {Hot-Electron Dynamics and Thermalization in Small Metallic Nanoparticles},
 journal = {ACS Photonics},
-volume = {0},
-number = {0},
-pages = {null},
+volume = {3},
+pages = {1637-1646},
 year = {2016},
 
 }
@@ -61,7 +60,7 @@ title = { Plasmon resonance broadening in small metal particles},
 journal = {J. Chem. Phys.},
 year = {1983},
 volume = {79},
-pages = {6130−6139}
+pages = {6130 - 6139}
 }
 
 #Ref 2 in CTP paper
