--- a/SMHET_SI.tex
+++ b/SMHET_SI.tex
@@ -7,7 +7,7 @@
 \usepackage{multirow}
 \usepackage{multicol}
 
-
+\renewcommand{\thefigure}{S\arabic{figure}}
 % Authors / affiliations
 % Authors in alphabetical order except for corresponding author (JJF), need 
 % to determine if this is the proper order and if we want to have co-first authors!
@@ -23,42 +23,13 @@
 \email{foleyj10@wpunj.edu}
 
 %Title of paper
-\title{Unique hot carrier distributions from scattering mediated absorption}
+\title{Supporting Information for Unique hot carrier distributions from scattering mediated absorption}
 % Date
 \date{\today}
 
 
 % Being document
 \begin{document}
-
-%\begin{tocentry}
-%\includegraphics[width=9cm]{figs/nanosphere_WGMv2.png}
-%\end{tocentry}
-
-%\begin{abstract}
-
-%Light-initiated generation of energetic carriers has attracted considerable attention as a paradigm for 
-%photocatalysis and solar energy conversion, and the use of noble metal nanoparticles that support localized surface
-%plasmon resonances has been widely explored as a medium for realizing this paradigm.  It was recently
-%shown that composite nanostructures that enable the interplay between dielectric scattering resonances and broad-band
-%absorption in small metal nanostructures, a phenomenon termed scattering mediated absorption, can be 
-%used to mediate energetic carrier transfer and selective photochemistry with 
-%low-intensity light while completely circumventing plasmon resonance.  In this work, we develop 
-%a multi-scale modeling approach for elucidating the hot carrier dynamics initiated by scattering mediated
-%absorption.  Our calculations reveal that unique hot carrier distributions and dynamics arise 
-%from scattering mediated absorption as compared to plasmon excitation, and also suggest that in 
-%a variety of circumstances, scattering mediated absorption may lead to more
-%efficient hot carrier generation than plasmon resonance under the same external illumination
-%conditions.  These results are an important first step in understanding the phenomena of
-%scattering mediated hot carrier generation, which has potential for expanding the
-%palette of materials that can be utilized for hot carrier mediated photochemistry beyond plasmonic metals,
-%and for enabling unique pathways for photocatalytic transformations.
-%\end{abstract}
-
-%%\maketitle
-
-%%\end{document}
-
 
 \section{Plots of Global Hot-Carrier Distributions}
 
