--- a/SMHET.bib
+++ b/SMHET.bib
@@ -128,6 +128,13 @@ year = {1992},
 edition = {2}
 }
 
+@book{Szabo,
+author = {A. Szabo and N. S. Ostlund},
+title = {Modern Quantum Chemistry: Introduction to Advanced Electronic Structure Theory},
+publisher = {McGraw-Hill},
+year = {1989},
+edition = {1}
+}
 
 @article{KPB_SciRep_2015,
 author = {C. S. Kumarasinghe and M. Premaratne and Q. Bao and G. P. Agrawal},
@@ -2339,3 +2346,40 @@ year={
   howpublished = "\url{http://www.lumerical.com/tcad-products/mode/}",
 
                 }
+
+%% TDCIS
+@article{KKS_JCP_2005,
+author = {P. Krause and T. Klamroth and P. Saalfrank},
+journal = {J. Chem. Phys.},
+title = {Time-dependent configuration-interaction calculations of laser-pulse-driven many-electron dynamics: Controlled
+dipole switching in lithium cyanide},
+volume = {123},
+pages = {074105},
+year = {2005}
+}
+
+@article{GHP_PRA_2010,
+author = {L. Greenman and P. J. Ho and E. Kamarchik and D. A. Mazziotti and R. Santra},
+journal = {Phys. Rev. A},
+title = {Implementation of the time-dependent configuration-interaction singles method for atomic strong-field processes},
+volume = {82},
+pages = {023406},
+year = {2010}
+}
+
+@article{DPG_PRL_2011,
+author = {{DePrince III}, A. E. and Pelton, M. and Guest, J. R. and Gray, S. K.},
+journal = {Phys. Rev. Lett.},
+volume = {107},
+pages = {196806},
+year = {2011}
+}
+
+@article{FM_JCP_2004,
+author = {J. D. Farnum and D. A. Mazziotti},
+title = {Spectral difference Lanczos method for efficient time propagation in quantum control theory},
+journal = {J. Chem. Phys.},
+volume = {120},
+pages = {5962},
+year = {2004}
+}
